update documentation for map.hasListeners to map.hasEventListeners

--- a/reference.html
+++ b/reference.html
@@ -2433,7 +2433,7 @@ map.addControl(layersControl);</code></pre>
 				<td>Alias to <code>removeEventListener</code>.</td>
 			</tr>
 			<tr>
-				<td><code>hasListeners( &lt;String&gt;&nbsp;<i>type</i>&nbsp;)</code></td>
+				<td><code>hasEventListeners( &lt;String&gt;&nbsp;<i>type</i>&nbsp;)</code></td>
 				<td><code>Boolean</code></td>
 				<td>Returns true if a particular event type has some listeners attached to it.</td>
 			</tr>
