--- a/reference.html
+++ b/reference.html
@@ -1682,7 +1682,7 @@ map.addLayer(rectangle);</code></pre>
 			<tr>
 				<td><code>setRadius( &lt;Number&gt;&nbsp;<i>radius</i>&nbsp;)</code></td>
 				<td><code>this</code></td>
-				<td>Sets the radius of a circle marker. Units are in meters.</td>
+				<td>Sets the radius of a circle marker. Units are in pixels.</td>
 			</tr>
 		</table>
 
